tests/regression/errors/basic/syntax_error_14.csd
// Syntax error test 14 - missing semicolon
sus x drip = 14
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
